Config docker with db, backcend and front. Success.