@@ -1,7 +1,9 @@
 package finance_tracker_api.config;
 
+import java.util.Arrays;
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,61 +20,33 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import finance_tracker_api.security.JwtAuthenticationFilter;
 
-/**
- * Spring Security configuration.
- *
- * <p>Sets up a stateless filter chain that permits public access to the
- * auth, health, OpenAPI and actuator endpoints, and requires a valid JWT
- * for everything else. CORS is enabled for the configured front-end
- * origin.</p>
- */
 @Configuration
 public class SecurityConfig {
 
+    @Value ("${cors.allowed-origins}")
+    private String allowedOrigins;
+
+
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    /**
-     * Creates the security configuration.
-     *
-     * @param jwtAuthenticationFilter filter that validates JWTs on each
-     *                                request
-     */
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
-    /**
-     * Provides the password encoder used to hash user passwords.
-     *
-     * @return a BCrypt-based encoder
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Exposes Spring Security's authentication manager.
-     *
-     * @param configuration the authentication configuration
-     * @return the authentication manager
-     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
         return configuration.getAuthenticationManager();
     }
 
-    /**
-     * Builds the HTTP security filter chain.
-     *
-     * @param http the security builder
-     * @return the configured filter chain
-     * @throws Exception if the chain cannot be configured
-     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // <-- CORS integration
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
@@ -86,18 +60,15 @@ public class SecurityConfig {
         return http.build();
     }
 
-    /**
-     * Provides the CORS configuration for cross-origin requests.
-     *
-     * @return the CORS configuration source
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
